iff: decode HAM8 images with masking correctly.

Fixes ticket #967.

Reviewed-by: Peter Ross